@@ -14,11 +14,6 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
-        <repository>
-            <id>teragam-repo</id>
-            <name>IcarusCoding Repository</name>
-            <url>https://archiva.teragam.de/repository/IcarusCoding/</url>
-        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -86,11 +81,6 @@
             <artifactId>jaudiotagger</artifactId>
             <version>3.0.1</version>
         </dependency>
-        <dependency>
-            <groupId>de.intelligence</groupId>
-            <artifactId>win-taskbar</artifactId>
-            <version>1.1</version>
-        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -130,8 +120,6 @@
                         <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
-                        <option>--add-exports</option>
-                        <option>javafx.graphics/com.sun.javafx.stage=win.taskbar</option>
                         <option>--add-exports</option>
                         <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
                     </options>
